js/src/tests/test262/staging/sm/Error/constructor-proto.js
const
nativeErrors
=
[
EvalError
RangeError
ReferenceError
SyntaxError
TypeError
URIError
]
;
assert
.
sameValue
(
Reflect
.
getPrototypeOf
(
Error
)
Function
.
prototype
)
for
(
const
error
of
nativeErrors
)
assert
.
sameValue
(
Reflect
.
getPrototypeOf
(
error
)
Error
)
;
reportCompare
(
0
0
)
;
